# voicedictate

./: .gitignore  ENGINEERING_BRIEF.md  QUICK_START.md  README.md  SETUP_GUIDE.md  pyproject.toml  shortcut_script.sh  test_setup.sh  voice_dictate.py  voice_dictate_bg.py
